--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -36,7 +36,7 @@ set -g status-right "#{prefix_highlight} #(ifconfig en0 | grep inet[^6] | awk '{
 
 # Panes settings
 set -g pane-border-style bg=default,fg=colour238
-set -g pane-active-border-style bg=default,fg=cyan
+set -g pane-active-border-style bg=default,fg=colour121
 unbind %
 bind b split-window -v -c "#{pane_current_path}"
 unbind '"'
