Update tmux status bar

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,8 +31,8 @@ set-option -g status-justify left
 set-option -g window-status-format "#[fg=colour244]#I:#W-"
 set-option -g window-status-current-format "#[bg=colour244,fg=black,bold] #I:#W* "
 set-option -g status-right-length 200
-set -g status-left "#[fg=white][Sess: #S] "
-set -g status-right "#{prefix_highlight} #(ifconfig en0 | grep inet[^6] | awk '{print $2}') #[fg=colour121]- #[fg=white]%A, %b %d %Y %I:%M %p #[fg=colour121]- #[fg=white]ϟ #{battery_percentage}"
+set -g status-left "Sess: #S | "
+set -g status-right "#{prefix_highlight} #(ifconfig en0 | grep inet[^6] | awk '{print $2}') - #[fg=white]%a, %b %d %Y %I:%M %p - #[fg=white]ϟ #{battery_percentage}"
 
 # Panes settings
 set -g pane-border-style bg=default,fg=colour238
