Update tmux status bar

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,7 +32,7 @@ set-option -g window-status-format "#[fg=colour244]#I:#W-"
 set-option -g window-status-current-format "#[bg=colour244,fg=black,bold] #I:#W* "
 set-option -g status-right-length 200
 set -g status-left "Sess: #S | "
-set -g status-right "#{prefix_highlight} #(ifconfig en0 | grep inet[^6] | awk '{print $2}') - #[fg=white]%a, %b %d %Y %I:%M %p - #[fg=white]ϟ #{battery_percentage}"
+set -g status-right "#{prefix_highlight} #(ifconfig en0 | grep inet[^6] | awk '{print $2}') - %a, %b %d %Y %I:%M %p - ϟ #{battery_percentage}"
 
 # Panes settings
 set -g pane-border-style bg=default,fg=colour238
