--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -31,7 +31,7 @@ set-option -g status-justify left
 set-option -g window-status-format "#[fg=colour244]#I:#W-"
 set-option -g window-status-current-format "#[bg=colour244,fg=black,bold] #I:#W* "
 set-option -g status-right-length 200
-set -g status-left "Sess: #S | "
+set -g status-left "Sess: #S - "
 set -g status-right "#{prefix_highlight} #(ifconfig en0 | grep inet[^6] | awk '{print $2}') - %a, %b %d %Y %I:%M %p - ϟ #{battery_percentage}"
 
 # Panes settings
