--- a/iTerm2/com.googlecode.iterm2.plist
+++ b/iTerm2/com.googlecode.iterm2.plist
@@ -914,7 +914,7 @@
 				<real>0.19215685129165649</real>
 			</dict>
 		</dict>
-		<key>Wynand</key>
+		<key>Wavy</key>
 		<dict>
 			<key>Ansi 0 Color</key>
 			<dict>
@@ -1331,13 +1331,13 @@
 		<integer>1</integer>
 	</dict>
 	<key>NSWindow Frame NSFontPanel</key>
-	<string>329 1418 445 77 -254 900 1920 1080 </string>
+	<string>329 1089 445 77 -254 900 1920 1080 </string>
 	<key>NSWindow Frame SUUpdateAlert</key>
-	<string>429 363 620 392 0 0 1440 877 </string>
+	<string>396 1398 620 392 -254 900 1920 1057 </string>
 	<key>NSWindow Frame SharedPreferences</key>
-	<string>141 1585 928 394 -254 900 1920 1080 </string>
+	<string>52 1851 796 486 -567 900 2560 1440 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>44 764 1401 877 -254 900 1920 1057 </string>
+	<string>-567 1720 1401 877 -567 900 2560 1440 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>0 2 1439 872 0 0 1440 900 </string>
 	<key>NeverWarnAboutShortLivedSessions_D8D8ABC3-6005-4D94-8358-5F8262B38795</key>
@@ -2171,9 +2171,11 @@
 	<key>SUHasLaunchedBefore</key>
 	<true/>
 	<key>SULastCheckTime</key>
-	<date>2019-07-16T09:26:14Z</date>
+	<date>2019-07-20T03:30:53Z</date>
 	<key>SUSendProfileInfo</key>
 	<false/>
+	<key>SUSkippedVersion</key>
+	<string>3.2.9</string>
 	<key>ShowFullScreenTabBar</key>
 	<true/>
 	<key>ShowPaneTitles</key>
