Seamless navigation between tmux panes and vim splits

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -67,4 +67,5 @@ set -g @prefix_highlight_copy_mode_attr 'fg=black,bg=yellow'
 set -g @plugin 'tmux-plugins/tmux-battery'
 set -g @plugin 'tmux-plugins/tmux-pain-control'
 set -g @plugin 'tmux-plugins/tmux-prefix-highlight'
+set -g @plugin 'christoomey/vim-tmux-navigator'
 run "~/.tmux/plugins/tpm/tpm"
