Restoring Clear Screen (C-l)

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -43,6 +43,9 @@ bind v split-window -h -c "#{pane_current_path}"
 unbind x
 bind x kill-pane
 
+# Restoring Clear Screen (C-l)
+bind C-l send-keys 'C-l'
+
 # Use vi(m) key bindings
 setw -g mode-keys vi
 
