--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -23,10 +23,10 @@ set -g renumber-windows on
 # Status bar configuration
 set-option -g status-position top
 set-option -g status-bg colour234
-set-option -g status-fg white
+set-option -g status-fg colour252
 set-option -g status-justify left
 set-option -g window-status-format "#[fg=colour244]#I:#W"
-set-option -g window-status-current-format "#[bg=colour238,fg=white,bold] #I:#W* "
+set-option -g window-status-current-format "#[bg=colour238,fg=colour252,bold] #I:#W* "
 set-option -g status-right-length 200
 set -g status-left "Sess #S - "
 set -g status-right "#{prefix_highlight} #(ifconfig en0 | grep inet[^6] | awk '{print $2}') - %a %b %d %I:%M %p - ϟ #{battery_percentage}"
