--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -4,6 +4,7 @@ tap "homebrew/cask"
 tap "homebrew/cask-fonts"
 tap "homebrew/core"
 tap "homebrew/services"
+tap "khanhas/tap"
 tap "universal-ctags/universal-ctags"
 brew "autoconf"
 brew "automake"
@@ -15,6 +16,7 @@ brew "python"
 brew "cairo"
 brew "cmake"
 brew "coreutils"
+brew "curl"
 brew "eigen"
 brew "exercism"
 brew "fzf"
@@ -32,6 +34,7 @@ brew "htop"
 brew "hub"
 brew "hugo"
 brew "imagemagick@6", link: true
+brew "jq"
 brew "libidn"
 brew "libmikmod"
 brew "libuv"
