--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -26,13 +26,14 @@ set-option -g status-bg default
 set-option -g status-fg colour252
 set-option -g status-justify left
 set-option -g window-status-format "#[fg=colour244]#I:#W"
-set-option -g window-status-current-format "#[bg=colour238,fg=colour252,bold] #I:#W* "
+set-option -g window-status-current-format "#[bg=colour240,fg=colour0,bold] #I:#W* "
 set-option -g status-right-length 200
 set -g status-left "Sess #S: "
 set -g status-right "#{prefix_highlight} #(ifconfig en0 | grep inet[^6] | awk '{print $2}') . %a %b %d %I:%M %p . ϟ #{battery_percentage}"
 
 # Panes settings
 set -g pane-border-style bg=default,fg=colour238
+set -g pane-active-border bg=default,fg=colour42
 unbind %
 bind b split-window -v -c "#{pane_current_path}"
 unbind '"'
