--- a/macos/Brewfile
+++ b/macos/Brewfile
@@ -57,7 +57,6 @@ brew "sdl_image"
 brew "sdl_mixer"
 brew "sdl_ttf"
 brew "stow"
-brew "the_silver_searcher"
 brew "tig"
 brew "tmux"
 brew "ttfautohint"
@@ -68,4 +67,5 @@ brew "zplug"
 brew "zsh"
 brew "caryll/tap/otfcc-mac64"
 brew "universal-ctags/universal-ctags/universal-ctags", args: ["HEAD"]
+cask "font-hack-nerd-font"
 cask "react-native-debugger"
